I did my main project section with some animations and responsivity, but how always I have an issue on ios, aspect-ratio is not working properly there...

--- a/src/App.scss
+++ b/src/App.scss
@@ -494,24 +494,34 @@ body.noScroll {
 
   #second-style {
     display: grid;
+    grid-template-areas: "grid-1 grid-2""grid-3 grid-4""grid-5 grid-6""grid-7 grid-7";
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 2fr);
     margin-top: 16px;
     gap: 5px;
     width: 100%;
 
+    @for $i from 1 through 7 {
+      .project-#{$i}-new {
+        grid-area: grid-#{$i};
+      }
+    }
+
     .project_item_new {
       overflow: hidden;
-      height: 250px;
-      background-position: center;
+      background-position: center !important;
       background-repeat: no-repeat !important;
       background-size: contain !important;
+      aspect-ratio: 5/3;
+
 
       .project_info {
-        height: 100%;
         align-items: center;
         display: flex;
         flex-direction: unset;
         justify-content: center;
+        width: 100%;
+        height: 100%;
       }
     }
 
@@ -597,9 +607,6 @@ body.noScroll {
     place-content: center;
   }
 
-  #second-style {
-    display: none;
-  }
 
 }
 
@@ -753,6 +760,17 @@ body.noScroll {
 
     #second-style {
       display: grid !important;
+
+
+      .project_item_new {
+
+
+        .project_info {
+          height: 100%;
+        }
+      }
+
+
     }
   }
 
@@ -851,6 +869,22 @@ body.noScroll {
 
   .section_name {
     font-size: 2.2rem;
+  }
+
+  .projects {
+
+    #second-style {
+      display: grid !important;
+      grid-template-areas: unset;
+      grid-template-columns: repeat(1, 1fr) !important;
+
+      @for $i from 1 through 7 {
+        .project-#{$i}-new {
+          grid-area: unset;
+        }
+      }
+
+    }
   }
 }
 
